--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-11.53MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-2.77MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-5.06MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-3.71MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-680.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇯🇵 日本-13.33MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-8.65MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-2.09MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-596.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
@@ -66,19 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
@@ -88,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
@@ -104,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
@@ -129,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-11.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
