--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-13.33MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-8.65MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-1.56MB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-729.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-215.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.09MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-596.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-729.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
